@@ -15,9 +15,7 @@
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.engine;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.DepositParameterTestFixture.DEPOSIT_PARAM_1;
-import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.WithdrawalRequestTestFixture.WITHDRAWAL_REQUEST_PARAMETER_1;
-import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.RpcErrorType.INVALID_PARAMS;
+import static org.hyperledger.besu.ethereum.api.graphql.internal.response.GraphQLError.INVALID_PARAMS;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
@@ -25,7 +23,6 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.BlobGas;
 import org.hyperledger.besu.datatypes.RequestType;
 import org.hyperledger.besu.datatypes.Wei;
@@ -33,28 +30,24 @@ import org.hyperledger.besu.ethereum.BlockProcessingOutputs;
 import org.hyperledger.besu.ethereum.BlockProcessingResult;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.JsonRpcRequest;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.JsonRpcRequestContext;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.DepositRequestParameter;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.EnginePayloadParameter;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.WithdrawalRequestParameter;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcError;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcResponse;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
-import org.hyperledger.besu.ethereum.core.DepositRequest;
 import org.hyperledger.besu.ethereum.core.Request;
 import org.hyperledger.besu.ethereum.core.Withdrawal;
-import org.hyperledger.besu.ethereum.core.WithdrawalRequest;
 import org.hyperledger.besu.ethereum.mainnet.BodyValidation;
-import org.hyperledger.besu.ethereum.mainnet.requests.DepositRequestValidator;
-import org.hyperledger.besu.ethereum.mainnet.requests.RequestsValidatorCoordinator;
-import org.hyperledger.besu.ethereum.mainnet.requests.WithdrawalRequestValidator;
+import org.hyperledger.besu.ethereum.mainnet.requests.MainnetRequestsValidator;
+import org.hyperledger.besu.ethereum.mainnet.requests.ProhibitedRequestValidator;
 import org.hyperledger.besu.evm.gascalculator.PragueGasCalculator;
 
-import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 
+import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -63,8 +56,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 @ExtendWith(MockitoExtension.class)
 public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
-  private static final Address depositContractAddress =
-      Address.fromHexString("0x00000000219ab540356cbb839cbe05303d7705fa");
 
   public EngineNewPayloadV4Test() {}
 
@@ -92,8 +83,7 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
   }
 
   @Test
-  public void shouldReturnValidIfDepositRequestsIsNull_WhenDepositRequestsProhibited() {
-    final List<DepositRequestParameter> depositRequests = null;
+  public void shouldReturnValidIfRequestsIsNull_WhenRequestsProhibited() {
     mockProhibitedRequestsValidator();
 
     BlockHeader mockHeader =
@@ -101,170 +91,69 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
             new BlockProcessingResult(
                 Optional.of(new BlockProcessingOutputs(null, List.of(), Optional.empty()))),
             Optional.empty(),
-            Optional.empty(),
             Optional.empty());
     when(blockchain.getBlockHeader(mockHeader.getParentHash()))
         .thenReturn(Optional.of(mock(BlockHeader.class)));
     when(mergeCoordinator.getLatestValidAncestor(mockHeader))
         .thenReturn(Optional.of(mockHeader.getHash()));
 
-    var resp =
-        resp(
-            mockEnginePayload(
-                mockHeader, Collections.emptyList(), null, depositRequests, null, null));
+    var resp = resp(mockEnginePayload(mockHeader, Collections.emptyList()));
 
     assertValidResponse(mockHeader, resp);
   }
 
   @Test
-  public void shouldReturnInvalidIfDepositRequestsIsNull_WhenDepositRequestsAllowed() {
-    final List<DepositRequestParameter> depositRequests = null;
-    mockAllowedDepositRequestsRequestValidator();
+  public void shouldReturnInvalidIfRequestsIsNull_WhenRequestsAllowed() {
+    mockAllowedRequestsValidator();
     var resp =
         resp(
             mockEnginePayload(
-                createBlockHeader(Optional.empty(), Optional.empty(), Optional.empty()),
-                Collections.emptyList(),
-                null,
-                depositRequests,
-                null,
-                null));
+                createBlockHeader(Optional.empty(), Optional.empty()), Collections.emptyList()));
 
     assertThat(fromErrorResp(resp).getCode()).isEqualTo(INVALID_PARAMS.getCode());
     verify(engineCallListener, times(1)).executionEngineCalled();
   }
 
   @Test
-  public void shouldReturnValidIfDepositRequestsIsNotNull_WhenDepositRequestsAllowed() {
-    final List<DepositRequestParameter> depositRequestsParam = List.of(DEPOSIT_PARAM_1);
-    final List<Request> depositRequests = List.of(DEPOSIT_PARAM_1.toDeposit());
+  public void shouldReturnValidIfRequestsIsNotNull_WhenRequestsAllowed() {
+    final List<Request> requests =
+        List.of(
+            new Request(RequestType.DEPOSIT, Bytes.of(1)),
+            new Request(RequestType.WITHDRAWAL, Bytes.of(1)),
+            new Request(RequestType.CONSOLIDATION, Bytes.of(1)));
 
-    mockAllowedDepositRequestsRequestValidator();
+    mockAllowedRequestsValidator();
     BlockHeader mockHeader =
         setupValidPayload(
             new BlockProcessingResult(
-                Optional.of(
-                    new BlockProcessingOutputs(null, List.of(), Optional.of(depositRequests)))),
-            Optional.empty(),
-            Optional.of(List.of(DEPOSIT_PARAM_1.toDeposit())),
-            Optional.empty());
-    when(blockchain.getBlockHeader(mockHeader.getParentHash()))
-        .thenReturn(Optional.of(mock(BlockHeader.class)));
-    when(mergeCoordinator.getLatestValidAncestor(mockHeader))
-        .thenReturn(Optional.of(mockHeader.getHash()));
-    var resp =
-        resp(
-            mockEnginePayload(
-                mockHeader, Collections.emptyList(), null, depositRequestsParam, null, null));
-
-    assertValidResponse(mockHeader, resp);
-  }
-
-  @Test
-  public void shouldReturnInvalidIfDepositRequestsIsNotNull_WhenDepositRequestsProhibited() {
-    final List<DepositRequestParameter> depositRequests = List.of();
-    lenient()
-        .when(protocolSpec.getRequestsValidatorCoordinator())
-        .thenReturn(RequestsValidatorCoordinator.empty());
-
-    var resp =
-        resp(
-            mockEnginePayload(
-                createBlockHeader(
-                    Optional.empty(), Optional.of(Collections.emptyList()), Optional.empty()),
-                Collections.emptyList(),
-                null,
-                depositRequests,
-                null,
-                null));
-
-    final JsonRpcError jsonRpcError = fromErrorResp(resp);
-    assertThat(jsonRpcError.getCode()).isEqualTo(INVALID_PARAMS.getCode());
-    verify(engineCallListener, times(1)).executionEngineCalled();
-  }
-
-  @Test
-  public void shouldReturnValidIfWithdrawalRequestsIsNull_WhenWithdrawalRequestsAreProhibited() {
-    mockProhibitedRequestsValidator();
-
-    BlockHeader mockHeader =
-        setupValidPayload(
-            new BlockProcessingResult(
-                Optional.of(new BlockProcessingOutputs(null, List.of(), Optional.empty()))),
-            Optional.empty(),
+                Optional.of(new BlockProcessingOutputs(null, List.of(), Optional.of(requests)))),
             Optional.empty(),
             Optional.empty());
     when(blockchain.getBlockHeader(mockHeader.getParentHash()))
         .thenReturn(Optional.of(mock(BlockHeader.class)));
     when(mergeCoordinator.getLatestValidAncestor(mockHeader))
         .thenReturn(Optional.of(mockHeader.getHash()));
-
-    var resp = resp(mockEnginePayload(mockHeader, Collections.emptyList(), null, null, null, null));
-
-    assertValidResponse(mockHeader, resp);
-  }
-
-  @Test
-  public void shouldReturnInvalidIfWithdrawalRequestsIsNull_WhenWithdrawalRequestsAreAllowed() {
-    mockAllowedWithdrawalsRequestValidator();
-
-    var resp =
-        resp(
-            mockEnginePayload(
-                createBlockHeader(Optional.empty(), Optional.empty(), Optional.empty()),
-                Collections.emptyList(),
-                null,
-                null,
-                null,
-                null));
-
-    assertThat(fromErrorResp(resp).getCode()).isEqualTo(INVALID_PARAMS.getCode());
-    verify(engineCallListener, times(1)).executionEngineCalled();
-  }
-
-  @Test
-  public void shouldReturnValidIfWithdrawalRequestsIsNotNull_WhenWithdrawalRequestsAreAllowed() {
-    final List<WithdrawalRequestParameter> withdrawalRequestsParams =
-        List.of(WITHDRAWAL_REQUEST_PARAMETER_1);
-    final List<Request> withdrawalRequests =
-        List.of(WITHDRAWAL_REQUEST_PARAMETER_1.toWithdrawalRequest());
-    mockAllowedWithdrawalsRequestValidator();
-    BlockHeader mockHeader =
-        setupValidPayload(
-            new BlockProcessingResult(
-                Optional.of(
-                    new BlockProcessingOutputs(null, List.of(), Optional.of(withdrawalRequests)))),
-            Optional.empty(),
-            Optional.empty(),
-            Optional.of(List.of(WITHDRAWAL_REQUEST_PARAMETER_1.toWithdrawalRequest())));
-    when(blockchain.getBlockHeader(mockHeader.getParentHash()))
-        .thenReturn(Optional.of(mock(BlockHeader.class)));
-    when(mergeCoordinator.getLatestValidAncestor(mockHeader))
-        .thenReturn(Optional.of(mockHeader.getHash()));
-    var resp =
-        resp(
-            mockEnginePayload(
-                mockHeader, Collections.emptyList(), null, null, withdrawalRequestsParams, null));
+    var resp = resp(mockEnginePayload(mockHeader, Collections.emptyList()), requests);
 
     assertValidResponse(mockHeader, resp);
   }
 
   @Test
-  public void
-      shouldReturnInvalidIfWithdrawalRequestsIsNotNull_WhenWithdrawalRequestsAreProhibited() {
-    final List<WithdrawalRequestParameter> withdrawalRequests = List.of();
+  public void shouldReturnInvalidIfRequestsIsNotNull_WhenRequestsProhibited() {
+    final List<Request> requests =
+        List.of(
+            new Request(RequestType.DEPOSIT, Bytes.of(1)),
+            new Request(RequestType.WITHDRAWAL, Bytes.of(1)),
+            new Request(RequestType.CONSOLIDATION, Bytes.of(1)));
+
     mockProhibitedRequestsValidator();
 
     var resp =
         resp(
             mockEnginePayload(
-                createBlockHeader(
-                    Optional.empty(), Optional.empty(), Optional.of(Collections.emptyList())),
-                Collections.emptyList(),
-                null,
-                null,
-                withdrawalRequests,
-                null));
+                createBlockHeader(Optional.empty(), Optional.of(Collections.emptyList())),
+                Collections.emptyList()),
+            requests);
 
     final JsonRpcError jsonRpcError = fromErrorResp(resp);
     assertThat(jsonRpcError.getCode()).isEqualTo(INVALID_PARAMS.getCode());
@@ -274,8 +163,7 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
   @Override
   protected BlockHeader createBlockHeader(
       final Optional<List<Withdrawal>> maybeWithdrawals,
-      final Optional<List<DepositRequest>> maybeDepositRequests,
-      final Optional<List<WithdrawalRequest>> maybeWithdrawalRequests) {
+      final Optional<List<Request>> maybeRequests) {
     BlockHeader parentBlockHeader =
         new BlockHeaderTestFixture()
             .baseFeePerGas(Wei.ONE)
@@ -283,16 +171,6 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
             .excessBlobGas(BlobGas.ZERO)
             .blobGasUsed(0L)
             .buildHeader();
-
-    Optional<List<Request>> maybeRequests;
-    if (maybeDepositRequests.isPresent() || maybeWithdrawalRequests.isPresent()) {
-      List<Request> requests = new ArrayList<>();
-      maybeDepositRequests.ifPresent(requests::addAll);
-      maybeWithdrawalRequests.ifPresent(requests::addAll);
-      maybeRequests = Optional.of(requests);
-    } else {
-      maybeRequests = Optional.empty();
-    }
 
     BlockHeader mockHeader =
         new BlockHeaderTestFixture()
@@ -303,7 +181,7 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
             .withdrawalsRoot(maybeWithdrawals.map(BodyValidation::withdrawalsRoot).orElse(null))
             .excessBlobGas(BlobGas.ZERO)
             .blobGasUsed(0L)
-            .requestsRoot(maybeRequests.map(BodyValidation::requestsRoot).orElse(null))
+            .requestsHash(maybeRequests.map(BodyValidation::requestsHash).orElse(null))
             .parentBeaconBlockRoot(
                 maybeParentBeaconBlockRoot.isPresent() ? maybeParentBeaconBlockRoot : null)
             .buildHeader();
@@ -320,24 +198,35 @@ public class EngineNewPayloadV4Test extends EngineNewPayloadV3Test {
         new JsonRpcRequestContext(new JsonRpcRequest("2.0", this.method.getName(), params)));
   }
 
+  protected JsonRpcResponse resp(
+      final EnginePayloadParameter payload, final List<Request> requests) {
+    final List<String> requestsWithoutRequestId =
+        requests.stream()
+            .sorted(Comparator.comparing(Request::getType))
+            .map(r -> r.getData().toHexString())
+            .toList();
+    Object[] params =
+        maybeParentBeaconBlockRoot
+            .map(
+                bytes32 ->
+                    new Object[] {
+                      payload,
+                      Collections.emptyList(),
+                      bytes32.toHexString(),
+                      requestsWithoutRequestId
+                    })
+            .orElseGet(() -> new Object[] {payload});
+    return method.response(
+        new JsonRpcRequestContext(new JsonRpcRequest("2.0", this.method.getName(), params)));
+  }
+
   private void mockProhibitedRequestsValidator() {
-    var validator = RequestsValidatorCoordinator.empty();
-    when(protocolSpec.getRequestsValidatorCoordinator()).thenReturn(validator);
+    var validator = new ProhibitedRequestValidator();
+    when(protocolSpec.getRequestsValidator()).thenReturn(validator);
   }
 
-  private void mockAllowedDepositRequestsRequestValidator() {
-    var validator =
-        new RequestsValidatorCoordinator.Builder()
-            .addValidator(RequestType.DEPOSIT, new DepositRequestValidator(depositContractAddress))
-            .build();
-    when(protocolSpec.getRequestsValidatorCoordinator()).thenReturn(validator);
-  }
-
-  private void mockAllowedWithdrawalsRequestValidator() {
-    var validator =
-        new RequestsValidatorCoordinator.Builder()
-            .addValidator(RequestType.WITHDRAWAL, new WithdrawalRequestValidator())
-            .build();
-    when(protocolSpec.getRequestsValidatorCoordinator()).thenReturn(validator);
+  private void mockAllowedRequestsValidator() {
+    var validator = new MainnetRequestsValidator();
+    when(protocolSpec.getRequestsValidator()).thenReturn(validator);
   }
 }
